--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 } */
 
 .myButtons {
-    padding-top: 30vh;
+    padding-top: 20vh;
     padding-left: 10vw;
     width: 2vw;
     height: 20vw;
@@ -72,4 +72,28 @@
     height: 25vh;
     position: relative;
     animation: seed 2s ease-in-out infinite;
+}
+
+.minimal a {
+    text-decoration: none;
+    color: rgb(211, 184, 238);
+    font-size: 20px;
+    font-family: Oswald;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+}
+
+.minimal p {
+    text-decoration: none;
+    color: rgb(211, 184, 238);
+    font-size: 20px;
+    font-family: Oswald;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+
+    cursor: pointer;
 }
