--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
-/* body {
-    background-color: black
-} */
+/*  Author: Tristan Scott
+    Date: 2023/12/04        */
 
 .myButtons {
     padding-top: 20vh;
