adjusting screen size formatting

--- a/css/style.css
+++ b/css/style.css
@@ -97,73 +97,87 @@
     cursor: pointer;
 }
 
-@media screen and (max-width: 950px ){
+@media screen and (max-width: 950px) {
 
-    
+    .minimal {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    .minimal a {
+        font-size: 15px;
+    }
+
+    .minimal p {
+        font-size: 15px;
+    }
+
     #imageRender {
         width: 100vh;
         height: 100vh;
         position: fixed;
     }
 
-    .myButtons{
-        padding-top: 10vh;
-        padding-left: 20vw;
+    .myButtons {
+        padding-top: 14vh;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-evenly;
-        left:17vh
     }
 
 
 }
 
-@media screen and (max-width: 540px ) {
-    .animation{   
-        left:-100px;
-        
+@media screen and (max-width: 540px) {
+    .animation {
+        left: -100px;
+
         width: 100vh;
 
         height: 130vh;
     }
 
-   
+
     .seed {
         width: 15vh;
         height: 15vh;
         position: relative;
         animation: seed 2s ease-in-out infinite;
     }
-    
+
     .sap {
         width: 15vh;
         height: 15vh;
         position: relative;
         animation: seed 2s ease-in-out infinite;
     }
-    
+
     .adult {
         width: 15vh;
         height: 15vh;
         position: relative;
         animation: seed 2s ease-in-out infinite;
     }
-    .myButtons{
-        padding-top: 5vh;
+
+    .myButtons {
+        padding-top: 1vh;
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
-        left:13vh;
+        left: 16.5vh;
     }
-    .minimal{
+
+    .minimal {
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
-        left:20vh
+        left: 20vh
     }
+
     #imageRender {
         width: 100vh;
         height: 130vh;
-        position:absolute;
+        position: absolute;
     }
- }
+}
