--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 
 .myButtons {
     padding-top: 20vh;
-    padding-left: 10vw;
+    padding-left: 5vw;
     width: 2vw;
     height: 20vw;
     display: flex;
@@ -73,9 +73,18 @@
     animation: seed 2s ease-in-out infinite;
 }
 
+.minimal {
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+
+}
+
 .minimal a {
     text-decoration: none;
-    color: rgb(211, 184, 238);
+    /* color: rgb(211, 184, 238); */
+    color: white;
     font-size: 20px;
     font-family: Oswald;
     font-style: normal;
@@ -86,7 +95,7 @@
 
 .minimal p {
     text-decoration: none;
-    color: rgb(211, 184, 238);
+    color: white;
     font-size: 20px;
     font-family: Oswald;
     font-style: normal;
@@ -165,7 +174,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
-        left: 19vh;
+        left: 21vh;
     }
 
     .minimal {
@@ -173,6 +182,16 @@
         flex-direction: row;
         justify-content: space-evenly;
         left: 20vh
+    }
+
+    .minimal a {
+        color: rgb(211, 184, 238);
+        font-size: 15px;
+    }
+
+    .minimal p {
+        color: rgb(211, 184, 238);
+        font-size: 15px;
     }
 
     #imageRender {
